--- a/index.html
+++ b/index.html
@@ -446,6 +446,27 @@
     but only had a positive impact when using it in combination with one model and the degree of its impact on the
     prediction of the bracket was dependent on the accuracy of the model it was used in combination with.</p>-->
   <h3 class="main">References</h3>
+  <p>
+    Balakrishnama, Suresh, and Aravind Ganapathiraju. &#147;Linear Discriminant Analysis - A Brief Tutorial.&#148; Institute for Signal and Information Processing 18 (1998): 1-8.
+  </p>
+  <p>
+    Kumar, Ch Aswani. &#147;Analysis of Unsupervised Dimensionality Reduction Techniques.&#148; Comput. Sci. Inf. Syst. 6.2 (2009): 217-227.
+  </p>
+  <p>
+    &#147;March Madness Bracket Scoring.&#148; JellyJuke, http://www.jellyjuke.com/march-madness-bracket-scoring.html.
+  </p>
+  <p>
+    Shlens, Jonathon. &#147;A Tutorial on Principal Component Analysis.&#148; arXiv preprint arXiv:1404.1100 (2014).
+  </p>
+  <p>
+    Jaisingh, Karan. &#147;March Madness 2019&#148;. https://github.com/kjaisingh/march-madness-2019
+  </p>
+  <p>
+    Morde, Vishal. &#147;XGBoost Algorithm: Long May She Reign!&#148; Medium, Towards Data Science, 8 Apr. 2019, https://towardsdatascience.com/https-medium-com-vishalmorde-xgboost-algorithm-long-she-may-rein-edd9f99be63d.
+  </p>
+  <p>
+    &#147;The History of the 3-Pointer.&#148; USA Basketball - The History of the 3-Pointer, https://www.usab.com/youth/news/2011/06/the-history-of-the-3-pointer.aspx.
+  </p>
   </section>
 </center>
 </body>
