--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@
   <p>Logistic Regression is a discriminative model that calculates the probability of a data point being in a specific class, in this case
         the probability of a team winning or losing.
   </p>
-  <img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy">
+  <img src = "images/finalLogTA.PNG" alt = "Logistic Regression Accuracy">
+  <img src = "images/finalLogPoints.PNG" alt = "Logistic Regression Points">
   <p>
     ____Insert Logistic Regression Analysis Here___
   </p>
@@ -332,7 +333,8 @@
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
           to reduce the final variance which should improve the accuracy of the model.
   </p>
-  <img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy">
+  <img src = "images/finalRandomForTA.PNG" alt = "Random Forest Accuracy">
+  <img src = "images/finalRandomFor.PNG" alt = "Random Forest Points">
   <p>
     ____Insert Random Forest Analysis Here___
   </p>
@@ -340,14 +342,16 @@
   <p>Naive Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
           correlations between features.
   </p>
-  <img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy">
+  <img src = "images/finalNaiveBTA.PNG" alt = "Naive Bayes Accuracy">
+  <img src = "images/finalNaiveBPoints.PNG" alt = "Naive Bayes Points">
   <p>
     ____Insert Naive Bayes Analysis Here___
   </p>
   <h3 class="model-header">Neural Networks</h3>
   <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.
   </p>
-  <img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy">
+  <img src = "images/finalNeuralNetTA.PNG" alt = "Neural Network Accuracy">
+  <img src = "images/finalNeuralNetPoints.PNG" alt = "Neural Network Points">
   <p>
     ____Insert Neural Networks Analysis Here___
   </p>
@@ -358,6 +362,7 @@
       best models to use when using machine learning to generate predictions. This is due to XGBoost's build-in cross validation and it's
       use of both LASSO and Ridge regression to prevent overfitting.
     </p>
+    <img src = "images/finalXGBPoints.PNG" alt = "XGB Points">
   <p>
     While our XGBoosting models were all able to perform very well in the training, they tended to perform towards the middle of the
     pack when generating a bracket for the 2019 March Madness competition. We believe this might be due to the fact that we train and test
@@ -394,7 +399,7 @@
       accuracy of the model. WHY?____This is a result of our algorithm making a decision based on the probabilities the
       model give, which means if the model gives inaccurate probabilities, then our seeding implementation will make a
       worse decision.</p>
-  <p><img src = "images/seedingImprovementModelsGraph.PNG" alt = "All Accuracies" class = "center"></p>
+  <p><img src = "images/finalSeedingImprove.PNG" alt = "All Accuracies" class = "center"></p>
   <h3 class="model-header">XG Boosting</h3>
   <p><img src = "images/xgBoost.PNG" alt = "All Accuracies" class = "center"></p>
   <h3 class="model-header">Combining our models: Pick Most Confident</h3>
